--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.8.1",
     "redux-persist": "^6.0.0",
     "sockjs-client": "^1.6.1",
     "web-vitals": "^2.1.4"
